// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options.experimental_onFinish > should send correct event information 1`] = `
{
  "callId": "test-call-id",
  "embedding": [
    0.1,
    0.2,
    0.3,
  ],
  "functionId": "test-function",
  "isEnabled": undefined,
  "metadata": {
    "customKey": "customValue",
  },
  "modelId": "mock-model-id",
  "operationId": "ai.embed",
  "provider": "mock-provider",
  "providerMetadata": undefined,
  "recordInputs": undefined,
  "recordOutputs": undefined,
  "response": {
    "body": {},
    "headers": {},
  },
  "usage": {
    "tokens": 10,
  },
  "value": "sunny day at the beach",
  "warnings": [],
}
`;

exports[`options.experimental_onStart > should send correct event information 1`] = `
{
  "callId": "test-call-id",
  "functionId": "test-function",
  "headers": {
    "user-agent": "ai/0.0.0-test",
  },
  "isEnabled": undefined,
  "maxRetries": 2,
  "metadata": {
    "customKey": "customValue",
  },
  "modelId": "mock-model-id",
  "operationId": "ai.embed",
  "provider": "mock-provider",
  "providerOptions": undefined,
  "recordInputs": undefined,
  "recordOutputs": undefined,
  "value": "sunny day at the beach",
}
`;
